# blog

./: .gitignore  Cargo.toml
.github/workflows/: deploy.yml
posts/industrial-network-fundamentals/: post_frontmatter.toml
posts/my-first-article/: post.md  post_frontmatter.toml
posts/tcp-fundamentals/: post.md  post_frontmatter.toml
src/: lib.rs  main.rs
src/handlers/: home_handler.rs  post_handler.rs
static/css/: index.css
tailwind/: base.css  package-lock.json  package.json
templates/: base.html  home.html  post.html
