[package]
name = "jwcbmat-blog"
version = "0.1.0"
edition = "2024"

[dependencies]
tera = { version = "2", features = ["glob_fs"] }
actix-web = "4"
env_logger = "0.11.0"
lazy_static = "1.4.0"
actix-files = "0.6.1"
pulldown-cmark = { version = "0.13.1", default-features = false, features = ["html"] }
ignore = "0.4"
toml = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
